Publish profile added.

--- a/Labels/Labels.csproj
+++ b/Labels/Labels.csproj
@@ -131,6 +131,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\DYMO.Label.Framework.2.0.2.js" />
     <Content Include="Scripts\nametags.js" />
+    <None Include="Properties\PublishProfiles\Production %28Apps%29.pubxml" />
     <None Include="Scripts\_references.js" />
     <Content Include="Web.config" />
   </ItemGroup>
