--- a/Labels/Labels.csproj
+++ b/Labels/Labels.csproj
@@ -127,24 +127,45 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\labels\mini.xml" />
+    <Content Include="Content\labels\private-chem-large.xml" />
+    <Content Include="Content\labels\private-chem-small.xml" />
     <Content Include="Content\labels\userlabel.xml" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\chemicals\chemicals.css" />
+    <Content Include="Scripts\chemicals\chemicals.js" />
+    <Content Include="Scripts\chemicals\images\ajax-loader.gif" />
+    <Content Include="Scripts\datatables\plugins\datetime-moment.js" />
     <Content Include="Scripts\DYMO.Label.Framework.2.0.2.js" />
     <Content Include="Scripts\nametags\images\ajax-loader.gif" />
     <Content Include="Scripts\nametags\nametags.js" />
     <None Include="Properties\PublishProfiles\Production %28Apps%29.pubxml" />
     <None Include="Scripts\_references.js" />
     <Content Include="Scripts\nametags\nametags.css" />
+    <Content Include="Scripts\urijs\jquery.URI.min.js" />
+    <Content Include="Scripts\urijs\URI.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Controllers\Api\ChemicalController.cs" />
+    <Compile Include="Controllers\ChemicalsController.cs" />
+    <Compile Include="Controllers\NameTagsController.cs" />
+    <Compile Include="Controllers\Api\UserController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Models\ChemicalLabel.cs" />
+    <Compile Include="Models\ChemicalItem.cs" />
+    <Compile Include="Models\ChemicalsModel.cs" />
+    <Compile Include="Models\LocationItem.cs" />
+    <Compile Include="Models\LogEntryModel.cs" />
+    <Compile Include="Models\ManageEditModel.cs" />
+    <Compile Include="Models\ManageModel.cs" />
     <Compile Include="Models\MenuItem.cs" />
     <Compile Include="Models\OrgItem.cs" />
+    <Compile Include="Models\ReportItem.cs" />
+    <Compile Include="Models\ReportModel.cs" />
     <Compile Include="Models\Repository.cs" />
+    <Compile Include="Models\RoomUtility.cs" />
     <Compile Include="Models\UserItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -155,7 +176,14 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\NameTags.cshtml" />
+    <Content Include="Views\NameTags\Index.cshtml" />
+    <Content Include="Views\Chemicals\Index.cshtml" />
+    <Content Include="Views\Chemicals\Manage.cshtml" />
+    <Content Include="Views\Chemicals\_ChemicalsTabMenu.cshtml" />
+    <Content Include="Views\Chemicals\Report.cshtml" />
+    <Content Include="Views\Chemicals\ManageEdit.cshtml" />
+    <Content Include="Views\Chemicals\_ChemicalPanel.cshtml" />
+    <Content Include="Views\Chemicals\ManageDelete.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
