--- a/Labels/Web.config.sample
+++ b/Labels/Web.config.sample
@@ -26,7 +26,7 @@
   </lnf>
 
   <appSettings>
-    <add key="ExitUrl" value="https://ssel-apps.eecs.umich.edu/login" />
+    <add key="ExitUrl" value="https://ssel-apps.eecs.umich.edu/login?ReturnUrl={0}" />
     <add key="InternalOrgTypeName" value="U of Michigan (US)" />
     <add key="MongoConnectionString" value="mongodb://xxxxx:xxxxx@localhost" />
     <add key="webpages:Version" value="3.0.0.0" />
