--- a/Labels/Labels.csproj
+++ b/Labels/Labels.csproj
@@ -143,7 +143,9 @@
     <Content Include="Scripts\nametags\nametags.css" />
     <Content Include="Scripts\urijs\jquery.URI.min.js" />
     <Content Include="Scripts\urijs\URI.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
